fix template wedding
